data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3805.wast
;; 4. **Test with Unreachable Code after `br_table` Target**:    - **Description**: Use functions where the control flow targets by `br_table` have unreachable code segments, ensuring calls handle the flow correctly.    - **Constraint Checked**: Control flow preservation and stack state.    - **Edge Case Relation**: Verifies that the engine properly manages the call stack and control flow consistency.

(assert_invalid
  (module
    (func $f (param i32) (result i32)
      (block
        (br_table 0 (i32.const 1) (i32.const 2))
        (unreachable)
      )
    )
    (func $g (call $f (i32.const 3)))
  )
  "type mismatch"
)